--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "vue-template-compiler": "^2.7.14",
-    "vuepress": "^1.9.8"
+    "vuepress": "^1.9.8",
+    "vuepress-plugin-code-copy": "^1.0.6"
   },
   "devDependencies": {
     "vuepress-theme-reco": "^1.6.16"
