--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs: # 工作流
 
         run: |
           npm install pnpm -g
-          pnpm i
+          pnpm i --no-frozen-lockfile
           pnpm run build
 
       - name: Deploy
